2006-05-09  Jb Evain  <jbevain@gmail.com>

	* cecil.build: rename to default.build

2006-05-08  Jb Evain  <jbevain@gmail.com>

	* Makefile:
		Sign the assembly.

	* cecil.csproj:
		Add an msbuild file.

2006-05-05  Jb Evain  <jbevain@gmail.com>

	* Mono.Cecil/AssemblyFactory.cs
	  Mono.Cecil/StructureReader.cs
	  Mono.Cecil/ModuleDefinition.cs:
		Add an AssemblyFactory.GetAssemblyManifest method.

2006-05-04  Jb Evain  <jbevain@gmail.com>

	* Mono.Cecil/TableComparers.cs:
		TypeDef.Compare: the name is enough against <Module>.

	* Mono.Cecil/ReflectionWriter.cs:
		Fix writing of namedargs in custom attributes.

2006-04-26  Jb Evain  <jbevain@gmail.com>

	* Mono.Cecil.Signatures/SignatureReader.cs:
		Don't create tons of hashtables.

2006-04-24  Jb Evain  <jbveain@gmail.com>

       * Mono.Cecil.Cil/MethodBody.cs:
               Fix cloning.

2006-04-21  Jb Evain  <jbevain@gmail.com>

	* Mono.Cecil/AssemblyFactory.cs
	  Mono.Cecil.Binary/MemoryBinaryWriter.cs:
		Use MemoryStream::WriteTo when it's possible.

2006-04-21	Rodrigo B. de Oliveira	<rodrigobamboo@gmail.com>

	* Mono.Cecil/SecurityDeclaration.cs
	  Mono.Cecil/ISecurityDeclaration.cs
	  Mono.Cecil/SecurityDeclarationCollection.cs
	  Mono.Cecil/ModuleDefinition.cs:
	  	Patch by Almann T. Goo (almann.goo@gmail.com) conditionally
		removing references to PermissionSet when compiling for the CompactFramework.
		
	* Mono.Cecil/CompactFrameworkCompatibility.cs:
		System.Security.PermissionSet definition no longer needed.

2006-04-21  Jb Evain  <jbevain@gmail.com>

	* *Collection.cs:
		Fix typo in RemoveAt.

2006-04-20  Jb Evain  <jbevain@gmail.com>

	* Mono.Cecil/ReflectionWriter.cs:
		Fix writing of complex arrays.
		Now we roundtrip SharpDevelop.

	* Mono.Cecil/ReflectionWriter.cs
	  Mono.Cecil/TableComparers.cs:
		Ensure <Module> will always be the first type.
		Fix roundtrip of Nemerle.

2006-04-19  Jb Evain  <jbevain@gmail.com>

	* Mono.Cecil.Cil/CodeWriter.cs: