@@ -1,3 +1,8 @@
+2006-05-12  Jb Evain  <jbevain@gmail.com>
+
+	* Mono.Cecil/AssemblyInfo.cs:
+		Hide the info if Cecil is embedded.
+
 2006-05-09  Jb Evain  <jbevain@gmail.com>
 
 	* cecil.build: rename to default.build
